# wordle-finder

./: Cargo.toml  LICENSE  Makefile  README.md
src/: gui.rs  main.rs  utils.rs  words.txt
ui/: index.html
