[package]
name = "wordle_finder"
version = "2.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.14"
native-dialog = { version = "0.6.3", features = ["windows_dpi_awareness", "windows_visual_styles"] }
regex = "1.5.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
wry = "0.13.2"
